--- a/create.html
+++ b/create.html
@@ -118,8 +118,20 @@
         <div class="upload-container">
           <label for="image-file" class="upload-box" id="preview-box">
             <span class="plus-icon" id="plus-icon">+</span>
-            <img id="preview-image" class="preview-image" src="" alt="Preview" style="display: none;" />
-            <input type="file" id="image-file" class="hidden-file" accept="image/*" required />
+            <img
+              id="preview-image"
+              class="preview-image"
+              src=""
+              alt="Preview"
+              style="display: none"
+            />
+            <input
+              type="file"
+              id="image-file"
+              class="hidden-file"
+              accept="image/*"
+              required
+            />
           </label>
         </div>
         <button type="button" id="createBlogBtn" class="createBlogBtn">
