change the titles

--- a/read.html
+++ b/read.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>View Blogs</title>
-    <link rel="icon" type="image/x-icon" href="sideBlogs.png" />
+    <link rel="icon" type="image/x-icon" href="blog img png.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -39,10 +39,10 @@
 
         <a href="#" class="socialBlogBtn"> View Blogs </a>
 
-        <a  class="signOutBtns">
+        <a class="signOutBtns">
           Logout <i class="fa-solid fa-right-from-bracket"></i>
         </a>
-        
+
         <div class="navbarAvatarWrapper">
           <div class="userAvatar">--</div>
           <span class="userFullName">--</span>
@@ -69,10 +69,10 @@
         <i class="fa-solid fa-xmark"></i>
       </div>
 
-        <div class="navbarAvatarWrapper">
-          <div class="userAvatar" id="sideBarUserAvatar">--</div>
-          <span class="userFullName">--</span>
-        </div>
+      <div class="navbarAvatarWrapper">
+        <div class="userAvatar" id="sideBarUserAvatar">--</div>
+        <span class="userFullName">--</span>
+      </div>
 
       <div class="sideBarLinks">
         <a href="index.html">All Blogs <i class="fa-solid fa-thumbs-up"></i></a>
