--- a/signUp.html
+++ b/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SignUp</title>
-    <link rel="icon" type="image/x-icon" href="sideBlogs.png" />
+    <link rel="icon" type="image/x-icon" href="blog img png.png" />
     <link rel="stylesheet" href="signUp.css" />
     <link
       rel="stylesheet"
