add my changes my blog web site

--- a/detail.html
+++ b/detail.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="detail.css" />
   </head>
   <body>
+    <div class="autoTypingNavbar">
+      <span class="tagline">Detail Page</span>
+    </div>
     <div class="blogDetail" id="blogDetail"></div>
     <div id="imageOverlay">
       <img src="" alt="Popup Image" id="popupImage" />
