--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="blog img png.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -14,6 +15,9 @@
     <link rel="stylesheet" href="profile.css" />
   </head>
   <body>
+    <div class="autoTypingNavbar">
+      <span class="tagline">Update Profile</span>
+    </div>
     <div class="blogDetail">
       <div class="profile-img">
         <img id="profileImage" class="detailImg" src="" />
@@ -27,13 +31,28 @@
       <div class="detailDes">
         <form id="updateForm">
           <div class="formField">
-            <input type="text" id="name" placeholder="Full Name" />
+            <input
+              type="text"
+              id="name"
+              placeholder="Full Name"
+              autocomplete="off"
+            />
           </div>
           <div class="formField">
-            <input type="email" id="email" placeholder="Email" />
+            <input
+              type="email"
+              id="email"
+              placeholder="Email"
+              autocomplete="off"
+            />
           </div>
           <div class="formField">
-            <input type="password" id="password" placeholder="New Password" />
+            <input
+              type="password"
+              id="password"
+              placeholder="New Password"
+              autocomplete="off"
+            />
           </div>
           <button type="submit" class="updateBtn">Update Profile</button>
         </form>
