add my css files changes

--- a/profile.html
+++ b/profile.html
@@ -21,10 +21,10 @@
     <div class="blogDetail">
       <div class="profile-img">
         <img id="profileImage" class="detailImg" src="" />
-        <div class="profile">
+        <label for="imageInput" class="profile">
           <i class="profile-icon fa-solid fa-camera"></i>
-        </div>
-        <input type="file" id="imageInput" style="display: none" />
+          <input type="file" id="imageInput" style="display: none" />
+        </label>
       </div>
       <h1 class="detailTitle">Update Profile</h1>
 
@@ -58,7 +58,6 @@
         </form>
       </div>
     </div>
-
     <script type="module" src="profile.js"></script>
   </body>
 </html>
