--- a/signUp.html
+++ b/signUp.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="navbar">
-      <span id="blogHeading" class="blog-heading">SignUp Blogging World</span>
+      <span id="blogHeading" class="blog-heading">SignUp</span>
     </div>
     <div class="signUpDiv" id="signUpDiv">
       <form class="signUpValidation" id="signUpValidation">
