add my all changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BlogsLife</title>
+  <title>Blogging World</title>
   <link rel="icon" type="image/x-icon" href="blogs title.webp" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -13,9 +13,19 @@
 </head>
 
 <body>
+  <div class="launch-screen" id="launch-screen">
+    <div class="logo">
+      <img src="blogs_logo.webp" class="launch-Logo" alt="blogLogo" width="65" height="65" />
+    </div>
+    <div class="launch-character-name">
+      <span>Developed By</span>
+      <span>Fareed Gul</span>
+    </div>
+  </div>
+
   <div class="navbar">
     <div class="logo-input">
-      <img src="blogs logo .webp" class="navbarLogo" alt="blogLogo" width="65" height="65" />
+      <img src="blogs_logo.webp" class="navbarLogo" alt="blogLogo" width="65" height="65" />
       <div class="search-container">
         <i class="fas fa-search search-icon"></i>
         <input type="text" class="search-input" id="search-input" placeholder="Search Blogs Life" />
