fix the changes

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blogging World</title>
-  <link rel="icon" type="image/x-icon" href="blogs title.webp" />
+  <link rel="icon" type="image/x-icon" href="./photos/blogs-title.webp" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
 <body>
   <div class="launch-screen" id="launch-screen">
     <div class="logo">
-      <img src="blogs_logo.webp" class="launch-Logo" alt="blogLogo" width="65" height="65" />
+      <img src="./photos/blogs_logo.webp" class="launch-Logo" alt="blogLogo" width="65" height="65" />
     </div>
     <div class="launch-character-name">
       <span>Developed By</span>
@@ -25,7 +25,7 @@
 
   <div class="navbar">
     <div class="logo-input">
-      <img src="blogs_logo.webp" class="navbarLogo" alt="blogLogo" width="65" height="65" />
+      <img src="./photos/blogs_logo.webp" class="navbarLogo" alt="blogLogo" width="65" height="65" />
       <div class="search-container">
         <i class="fas fa-search search-icon"></i>
         <input type="text" class="search-input" id="search-input" placeholder="Search Blogs Life" />
@@ -38,6 +38,9 @@
       <!-- <a href="read.html" class="auth-required">View Blogs</a> -->
       <a class="signOutBtn auth-required">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
       <a href="signUp.html" class="guest-only">Sign Up <i class="fa-solid fa-user-plus"></i></a>
+    </div>
+    <div class="nav-avatar">
+      
     </div>
   </div>
 
@@ -85,7 +88,7 @@
 
     </div>
 
-    <script src="app.js" type="module"></script>
+    <script src="./javascript/app.js" type="module"></script>
 </body>
 
 </html>
