--- a/signUp.html
+++ b/signUp.html
@@ -1,100 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SignUp</title>
-    <link rel="icon" type="image/x-icon" href="blog img png.png" />
-    <link rel="stylesheet" href="signUp.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <div class="navbar">
-      <span id="blogHeading" class="blog-heading">SignUp</span>
-    </div>
-    <div class="signUpDiv" id="signUpDiv">
-      <form class="signUpValidation" id="signUpValidation">
-        <div class="closeIcon">
-          <i id="closeIcon" class="icon fa-solid fa-xmark"></i>
-        </div>
-        <p>Enter UserName :</p>
-        <input
-          type="text"
-          id="userName"
-          placeholder="Name"
-          autocomplete="off"
-        />
-        <p>Enter Email Address:</p>
-        <input
-          type="email"
-          id="signUpEmail"
-          placeholder="Email"
-          autocomplete="off"
-        />
-        <p>Enter Email Password:</p>
-        <input
-          type="password"
-          id="signUpPassword"
-          placeholder="Password"
-          autocomplete="off"
-        />
-        <button id="signUpBtn" class="signUpBlogBtn" type="button">
-          SignUp
-        </button>
-      </form>
-    </div>
 
-    <div class="logInDiv" id="logInDiv">
-      <form class="logInValidation" id="logInValidation">
-        <div class="closeIcon">
-          <i id="closeIcon2" class="icon fa-solid fa-xmark"></i>
-        </div>
-        <p>Enter Email Address:</p>
-        <input
-          type="email"
-          id="logInEmail"
-          placeholder="Email"
-          autocomplete="off"
-        />
-        <p>Enter Email Password:</p>
-        <input
-          type="password"
-          id="logInPassword"
-          placeholder="Password"
-          autocomplete="off"
-        />
-        <button id="logInBtn" class="logInBlogBtn" type="button">Log In</button>
-      </form>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SignUp</title>
+  <link rel="icon" type="image/x-icon" href="blog img png.png" />
+  <link rel="stylesheet" href="./styles/signUp.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-    <div class="mainDiv">
-      <div class="sideButton">
-        <button id="signUpBtnUx" class="signUpBtn">
-          SignUp <i class="fa-solid fa-user-plus"></i>
-        </button>
-        <button id="logInBtnUx" class="logInBtn">Log In</button>
+<body>
+  <div class="navbar">
+    <span id="blogHeading" class="blog-heading">SignUp</span>
+  </div>
+  <div class="signUpDiv" id="signUpDiv">
+    <form class="signUpValidation" id="signUpValidation">
+      <div class="closeIcon">
+        <i id="closeIcon" class="icon fa-solid fa-xmark"></i>
       </div>
-      <div class="blogImg" id="blogImg"></div>
+      <p>Enter UserName :</p>
+      <input type="text" id="userName" placeholder="Name" autocomplete="off" />
+      <p>Enter Email Address:</p>
+      <input type="email" id="signUpEmail" placeholder="Email" autocomplete="off" />
+      <p>Enter Email Password:</p>
+      <input type="password" id="signUpPassword" placeholder="Password" autocomplete="off" />
+      <button id="signUpBtn" class="signUpBlogBtn" type="button">
+        SignUp
+      </button>
+    </form>
+  </div>
+
+  <div class="logInDiv" id="logInDiv">
+    <form class="logInValidation" id="logInValidation">
+      <div class="closeIcon">
+        <i id="closeIcon2" class="icon fa-solid fa-xmark"></i>
+      </div>
+      <p>Enter Email Address:</p>
+      <input type="email" id="logInEmail" placeholder="Email" autocomplete="off" />
+      <p>Enter Email Password:</p>
+      <input type="password" id="logInPassword" placeholder="Password" autocomplete="off" />
+      <button id="logInBtn" class="logInBlogBtn" type="button">Log In</button>
+    </form>
+  </div>
+
+  <div class="mainDiv">
+    <div class="sideButton">
+      <button id="signUpBtnUx" class="signUpBtn">
+        SignUp <i class="fa-solid fa-user-plus"></i>
+      </button>
+      <button id="logInBtnUx" class="logInBtn">Log In</button>
     </div>
+    <div class="blogImg" id="blogImg"></div>
+  </div>
 
-    <footer class="footer">
-      <p>
-        © 2025 <strong>SideBlogs</strong> — Made with ❤️ by
-        <a
-          href="https://www.linkedin.com/in/fareed-gul-946329333/"
-          target="_blank"
-        >
-          Fareed Gul
-        </a>
-      </p>
-    </footer>
+  <footer class="footer">
+    <p>
+      © 2025 <strong>SideBlogs</strong> — Made with ❤️ by
+      <a href="https://www.linkedin.com/in/fareed-gul-946329333/" target="_blank">
+        Fareed Gul
+      </a>
+    </p>
+  </footer>
 
-    <script src="signUp.js" type="module"></script>
-  </body>
+  <script src="./javascript/signUp.js" type="module"></script>
+</body>
+
 </html>
