--- a/create.html
+++ b/create.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="create.css" />
+  <link rel="stylesheet" href="./styles/create.css" />
 </head>
 
 <body>
@@ -92,7 +92,7 @@
     </p>
   </footer>
 
-  <script src="create.js" type="module"></script>
+  <script src="./styles/create.css" type="module"></script>
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 </body>
