--- a/detail.html
+++ b/detail.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Detail ...</title>
-    <link rel="icon" type="image/x-icon" href="blog img png.png" />
-    <link rel="stylesheet" href="detail.css" />
-  </head>
-  <body>
-    <div class="autoTypingNavbar">
-      <span class="tagline">Detail Page</span>
-    </div>
-    <div class="blogDetail" id="blogDetail"></div>
-    <div id="imageOverlay">
-      <img src="" alt="Popup Image" id="popupImage" />
-    </div>
 
-    <script src="detail.js" type="module"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blog Detail ...</title>
+  <link rel="icon" type="image/x-icon" href="blog img png.png" />
+  <link rel="stylesheet" href="./styles/detail.css" />
+</head>
+
+<body>
+  <div class="autoTypingNavbar">
+    <span class="tagline">Detail Page</span>
+  </div>
+  <div class="blogDetail" id="blogDetail"></div>
+  <div id="imageOverlay">
+    <img  alt="Popup Image" id="popupImage" />
+  </div>
+
+  <script src="./javascript/detail.js" type="module"></script>
+</body>
+
 </html>
