--- a/read.html
+++ b/read.html
@@ -103,6 +103,6 @@
       </p>
     </footer>
 
-    <script src="read.js" type="module"></script>
+    <script src="./javascript/read.js" type="module"></script>
   </body>
 </html>
